--- a/registration.html
+++ b/registration.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
+    <link rel="stylesheet" href="registration.css">
 </head>
 <body>
-    <h1>Registration Form</h1>
-    <form action="">
+    <div class="heading">
+        <h1>Registration Form</h1>
+        <hr>
+    </div>
+    <div class="form">
+        <form action="">
+            <input type="text" id="name" placeholder="Enter your name" required>
+            <br>
+            <input type="email" id="email" placeholder="Enter your email" required>
+            <br>
+            
+                <input type="radio" name="gender"> 
+                <label for="male" id="male">Male</label>
+                <input type="radio" name="gender">
+                <label for="female" id="female">Female</label>
+                
+            <br>
+            <select name="country" id="country">
+                <option value="country" disabled>Choose your country:</option>
+                <option value="India">India</option>
+                <option value="Pakistan">Pakistan</option>
+                <option value="China">China</option>
+                <option value="Bangladesh">Bangladesh</option>
+                <option value="USA">USA</option>
+                <option value="Canada">Canada</option>
+            </select>
+            <br>
+            <input id="city" type="text" name="city" placeholder="Enter your city" required>
+            <br>
+            <label for="dob" id="date">DOB</label>
+            <input type="date" name="dob" id="dob" placeholder="Enter your DOB" required>
+            <br>
+            <input id="register" type="submit" value="Register">
+        </form>
+    </div>
+    <!-- <form action="">
         <label for="name">Name</label>
         <input type="text" name="name" placeholder="Enter your name" required>
         <br>
@@ -39,6 +74,6 @@
         <input type="date" name="dob" placeholder="Enter your DOB" required>
         <br>
         <input type="submit" value="Register">
-    </form>
+    </form> -->
 </body>
 </html>
