Eight cards full and final

--- a/product.html
+++ b/product.html
@@ -24,7 +24,7 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
             border-radius: 10px;
             overflow: hidden; /*content ko next line mein le aayega*/
-            transition: linear-gradient(135deg,#f5);
+            transition: linear-gradient(135deg,#f5f5f5);
             width: 300px;
         }
         .product-card:hover{
