--- a/Menu Bar/aboutUs.html
+++ b/Menu Bar/aboutUs.html
@@ -34,11 +34,12 @@
     </style>
 </head>
 <body>
-        <a href="#" class="active">Home</a>
-        <a href="#">ABout US</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Gallery</a>
+    <div class="top-nav">
+        <a href="home.html" >Home</a>
+        <a href="aboutUs.html" class="active">About US</a>
+        <a href="contactUs.html">Contact Us</a>
+        <a href="gallery.html">Gallery</a>
     </div>
-    <h2>My menu Bar</h2>
+    <h2>About Us page</h2>
 </body>
 </html>
